fix comment header overlap on comment action

--- a/app/assets/stylesheets/pages/notes.scss
+++ b/app/assets/stylesheets/pages/notes.scss
@@ -584,5 +584,9 @@ ul.notes {
   .notes_content .note-header .note-headline-light {
     display: inline-block;
     position: relative;
+
+    @media (max-width: $screen-md-min) {
+      display: block;
+    }
   }
 }
